--- a/PP_3_1_2_Boot_Security-master/src/main/resources/application.properties
+++ b/PP_3_1_2_Boot_Security-master/src/main/resources/application.properties
@@ -4,9 +4,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/my_db
 spring.datasource.username=root
 spring.datasource.password=Koncurrent2033
 
+server.port=8080
+server.servlet.context-path=/
+
 # Hibernate properties
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.mvc.hiddenmethod.filter.enabled=true
